--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-collapsible": "^1.1.1",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
+    "classnames": "^2.5.1",
+    "dayjs": "^1.11.13",
     "next": "15.0.1",
     "primereact": "^10.8.4",
     "react": "19.0.0-rc-69d4b800-20241021",
