--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@iconify/react": "^5.0.2",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
