--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
+    "formik": "^2.4.6",
     "next": "15.0.1",
     "primereact": "^10.8.4",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-query": "^3.39.3",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "eslint": "^8",
