--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "15.0.1",
     "primereact": "^10.8.4",
     "react": "19.0.0-rc-69d4b800-20241021",
+    "react-click-away-listener": "^2.2.3",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
