--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.26.0",
     "@iconify/react": "^5.0.2",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
+    "babel-jest": "^29.7.0",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
@@ -26,9 +29,15 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.0.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
+    "jest": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
+  },
+  "jest": {
+    "verbose": true
   }
 }
