--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
     "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
     "@iconify/react": "^5.0.2",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@reduxjs/toolkit": "^2.3.0",
@@ -38,6 +40,9 @@
     "tailwindcss": "^3.4.1"
   },
   "jest": {
-    "verbose": true
+    "verbose": true,
+    "setupFiles": [
+      "<rootDir>/check.test.js"
+  ]
   }
 }
