--- a/package.json
+++ b/package.json
@@ -35,14 +35,17 @@
     "@testing-library/react": "^16.0.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
-    "jest": "^29.7.0",
+    "jest": "v25.2.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   },
   "jest": {
     "verbose": true,
-    "setupFiles": [
-      "<rootDir>/check.test.js"
-  ]
+    "transformIgnorePatterns": [
+      "node_modules/(?!yup)/"
+    ],
+    "transform": {
+      "^.+\\.[t|j]s?$": "babel-jest"
+    }
   }
 }
